find some overflow bug

--- a/trafalgar/css/style.css
+++ b/trafalgar/css/style.css
@@ -417,7 +417,8 @@ body {
     position: absolute;
     left: 0;
     top: 54%;
-    z-index: -1; }
+    z-index: -1;
+    overflow: hidden; }
     @media screen and (max-width: 1280px) {
       .feedback-section__dots {
         left: -50px;
@@ -529,3 +530,6 @@ body {
     left: 0;
     top: 965px;
     z-index: -1; }
+    @media screen and (max-width: 1024px) {
+      .tear__our-services {
+        width: 40%; } }
